--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
                 <h1>Login</h1>
                 <p>Seja bem vindo ao projeto CRUD, faça login para continuar!</p>
                 <form action="login.php" method="post">
-
+                    <div class="campo">
+                        <input type="email" name="login" id="ilogin" placeholder="Insira seu e-mail"> 
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <input type="password" name="senha" id="isenha" placeholder="Insira sua senha"> 
+                        <label for="isenha">Senha</label>
+                    </div>
                 </form>
             </div>
         </section>
