--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Login</title>
 </head>
 <body>
@@ -16,15 +17,20 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo ao projeto CRUD, faça login para continuar!</p>
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <input type="email" name="login" id="ilogin" placeholder="Insira seu e-mail"> 
+                        <i class="material-icons">person</i>
+                        <input type="email" name="login" id="ilogin" placeholder="Insira seu e-mail" 
+                        autocomplete="email" required maxlength="30"> 
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <input type="password" name="senha" id="isenha" placeholder="Insira sua senha"> 
+                        <i class="material-icons">vpn_key</i>
+                        <input type="password" name="senha" id="isenha" placeholder="Insira sua senha" 
+                        autocomplete="current-password" required minlength="8"> 
                         <label for="isenha">Senha</label>
                     </div>
+                    <input type="submit" value="Entrar"> 
                 </form>
             </div>
         </section>
