--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem vindo ao projeto CRUD, faça login para continuar!</p>
+                <p>Seja bem vindo(a) ao projeto tela de login, esse projeto foi criado no módulo 4 do curso de HTML do curso em video!</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <i class="material-icons">person</i>
